--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,9 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  name: DemoAgent   # Your custom agent pool
+  demands:
+    - Agent.Name -equals PracticeAgent  # Specific agent name
 
 steps:
 - task: Maven@3
@@ -15,8 +17,9 @@ steps:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.17'  # Change to '22' if needed
+    jdkVersionOption: '1.17'  # Use '1.22' if Azure DevOps supports it
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'clean package'
+
